<resources>
    <string name="app_name">Turtle</string>

    <string name="hour">H</string>
    <string name="minute">M</string>

    <string name="foreground_service_stopped_toast">Turtle have stopped.</string>

    <string name="notification_explanation">Your current day phone usage: </string>
    <string name="notification_app_usage_not_available">Your current day phone usage is not available now</string>

    <string name="bottom_navigation_daily_usage">Daily Usage</string>
    <string name="preferences">Preferences</string>

    <string name="ask_for_permission_dialog_title">Ask for permission</string>
    <string name="ask_for_permission_dialog_body">We need usage state permission to track your mobile phone usage state for you.</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="activate_turtle">Activate Turtle</string>

    <!--Preference strings-->
    <string name="basic">Basic</string>
    <string name="pref_phone_usage_goal">Phone usage goal</string>
    <string name="pref_phone_usage_goal_summary">Set your goal for your daily mobile phone usage</string>
    <string name="pref_app_usage_goal">Single app usage goal</string>
    <string name="pref_app_usage_goal_summary">Set your goal for your daily usage of a single app on your phone</string>
    <string name="pref_main_preference_title">Preferences</string>
</resources>
