<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/basic">
        <com.takisoft.preferencex.TimePickerPreference
            android:key="pref_phone_usage"
            android:title="@string/pref_phone_usage_goal"
            android:summary="@string/pref_phone_usage_goal_summary"
            app:pref_hourFormat="h24"
            app:pref_summaryHasTime="@string/pref_phone_usage_goal_summary"/>

        <com.takisoft.preferencex.TimePickerPreference
            android:key="pref_app_usage"
            android:title="@string/pref_app_usage_goal"
            android:summary="@string/pref_app_usage_goal_summary"
            app:pref_hourFormat="h24"
            app:pref_summaryHasTime="@string/pref_app_usage_goal_summary"/>
    </PreferenceCategory>

</PreferenceScreen>